--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,9 +16,37 @@ p {
   height: 8vh;
   background-color: black;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  padding: 0 98px;
+  gap: 10px;
 }
 
+.header-link {
+  position: relative;
+}
+
+.drop-down-links {
+  display: none;
+  background-color: aqua;
+  position: absolute;
+}
+
+.drop-down-links-visible {
+  display: grid !important;
+}
+
+.material-icons-round {
+  color: white;
+}
+
+.logo {
+  height: 48px;
+  width: auto;
+}
+
+#close-btn {
+  display: none;
+}
 #main-container {
   flex: 1;
   background-color: white;
@@ -66,3 +94,8 @@ p {
         margin: 8px;
     }
  } */
+
+html {
+  visibility: visible;
+  opacity: 1;
+}
