--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,11 @@
+
+
 body {
     padding: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #f1eeee;
+    background-color: black;
     font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 } 
 
@@ -12,19 +14,37 @@ p {
     padding: 0;
 }
 
-.header {
-  height: 8vh;
+header button {
+  border: none;
+  outline: none;
   background-color: black;
+  color: white;
+  padding-right: 0;
+  margin-right: 0;
+}
+
+.header {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  padding: 0 98px;
-  gap: 10px;
+  margin: 0 10%;
+  color: white;
 }
 
 .header-link {
   position: relative;
 }
 
+nav {
+  margin-bottom: 10px;
+}
+.header-top {
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+  gap: 5px;
+}
+ 
 .drop-down-links {
   display: none;
   background-color: aqua;
@@ -35,10 +55,6 @@ p {
   display: grid !important;
 }
 
-.material-icons-round {
-  color: white;
-}
-
 .logo {
   height: 48px;
   width: auto;
@@ -47,10 +63,49 @@ p {
 #close-btn {
   display: none;
 }
+
 #main-container {
   flex: 1;
   background-color: white;
 }
+.search-bar-div {
+  width: 100%;
+  margin: 14px;
+}
+ .header-top-link, .drop-down-menu-link {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+ }
+
+ .arrow path {
+  transition: d 0.45s;
+}
+
+.header-top-link:hover >.arrow path, .drop-down-menu-link:hover >.arrow path {
+  d: path("M12 14l-4-4h8z");
+}
+
+
+#search-bar {
+  height: 32px;
+  min-width: 32vw;
+  padding: 5px 20px;
+  border: 1px solid #d8d8d8;
+  border-radius: 20px;
+  box-sizing: border-box;
+  background-image: url("/home/luis/repos/drop-down-menu/src/imgs/Vector_search_icon.svg");
+  background-repeat: no-repeat;
+  background-position-y: center;
+  background-position-x: 98%;
+  background-size: auto 80%;
+}
+
+#search-bar:focus {
+  outline: none;
+}
+
+
 
 /* Sticky Footer and credit */
 .footer {
