--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,9 +35,6 @@ header button {
   position: relative;
 }
 
-nav {
-  margin-bottom: 10px;
-}
 .header-top {
   display: flex;
   margin-top: 10px;
@@ -104,7 +101,18 @@ nav {
   outline: none;
 }
 
+.cart-icon {
+  color: white;
+  padding-left: 30px;
+}
 
+.drop-down-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(43, 42, 42);
+  width: 100vw;
+}
 
 /* Sticky Footer and credit */
 .footer {
