--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,7 +109,7 @@ header button {
   color: white;
   font-size: .95rem;
   display: grid;
-  grid-template-columns: repeat(4, minmax(max-content, 375px));
+  grid-template-columns: repeat(4, minmax(200px, max-content));
   background-color: #1F2024;
   left: 0;
   width: 100vw;
@@ -129,7 +129,9 @@ header button {
 }
 
 .drop-down-links-item {
-  padding: 20px 100px;
+  padding-top: 20px;
+  padding-left: 10vw;
+  padding-bottom: 20px;
 }
 
 .drop-down-links-header {
